--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>About</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
 		<header>
 			<div id="my_name">Mario Aburto</div>
@@ -24,7 +25,7 @@
 				<p>My name is Mario Aburto and I am 21 years old. I am currently working at a tech support center in Somerset, NJ. I studied two years in Rutgers School of Engineering and now I'm pursuing coding, programming, and web design.</p>
 			</section>
 
-			<section id="ConnectWithMe">
+			<section id="sidebar">
 				<h3>Connect With Me</h3>
 				<a href="https://twitter.com/MarioAburto33"><img class="logo" src="assets/images/twitter-logo.jpg"></a>
 				<a href="https://www.linkedin.com/in/mario-aburto-4b3a2b125?trk=nav_responsive_tab_profile"><img class="logo" src="assets/images/LinkedInLogo.jpg"></a>
