--- a/index.html
+++ b/index.html
@@ -8,25 +8,28 @@
 
 <body>
 		<header>
-			<div id="my_name">Mario Aburto</div>
-
-			<div id="links">
-				<a href="index.html">About</a>
-				<a href="portfolio.html">Portfolio</a>
-				<a href="contact.html">Contact</a>
-			</div>
+			<div id="entire-content">
+				<h3 id="my_name">Mario Aburto</h3>
+				<div id="nav">	
+					<a href="index.html">About</a>
+					<a href="portfolio.html">Portfolio</a>
+					<a class="border-right" href="contact.html">Contact</a>
+				</div>
+			</div>	
 		</header>
 
 		<div id="container">
 			
 			<section id="about_me">
 				<h1>About Me</h1>
+				<div class="line"></div>
 				<img id="image" src="assets/images/supermario.jpg">
 				<p>My name is Mario Aburto and I am 21 years old. I am currently working at a tech support center in Somerset, NJ. I studied two years in Rutgers School of Engineering and now I'm pursuing coding, programming, and web design.</p>
 			</section>
 
 			<section id="sidebar">
 				<h3>Connect With Me</h3>
+				<div class="line"></div>
 				<a href="https://twitter.com/MarioAburto33"><img class="logo" src="assets/images/twitter-logo.jpg"></a>
 				<a href="https://www.linkedin.com/in/mario-aburto-4b3a2b125?trk=nav_responsive_tab_profile"><img class="logo" src="assets/images/LinkedInLogo.jpg"></a>
 				<a href="https://github.com/marioaburto10"><img class="logo" src="assets/images/GithubLogo.jpg"></a>
