--- a/index.html
+++ b/index.html
@@ -1,42 +1,49 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="em">
 <head>
-	<title>About</title>
+	<meta charset="utf-8">
+	<title>Home</title>
+	<!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	
 </head>
 
 <body>
+	
+
 		<header>
-			<div id="entire-content">
-				<h3 id="my_name">Mario Aburto</h3>
-				<div id="nav">	
-					<a href="index.html">About</a>
-					<a href="portfolio.html">Portfolio</a>
-					<a class="border-right" href="contact.html">Contact</a>
-				</div>
-			</div>	
+			<div id="name">
+				<h1 id="mario">Mario Aburto</h1>
+			</div>
+			<nav>
+				<ul>
+					<li><a href="#">About</a></li>
+				   	<li><a href="portfolio.html">Portfolio</a></li>
+				   	<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
 		</header>
 
-		<div id="container">
-			
-			<section id="about_me">
-				<h1>About Me</h1>
-				<div class="line"></div>
-				<img id="image" src="assets/images/supermario.jpg">
+		<div id="container">	<section id="main-content">
+				<h2>About Me</h2>
+				<div class="line1"></div>
+				<img id="image1" src="assets/images/
+				supermario.jpg">
 				<p>My name is Mario Aburto and I am 21 years old. I am currently working at a tech support center in Somerset, NJ. I studied two years in Rutgers School of Engineering and now I'm pursuing coding, programming, and web design.</p>
 			</section>
 
-			<section id="sidebar">
+			<aside>
 				<h3>Connect With Me</h3>
-				<div class="line"></div>
-				<a href="https://twitter.com/MarioAburto33"><img class="logo" src="assets/images/twitter-logo.jpg"></a>
-				<a href="https://www.linkedin.com/in/mario-aburto-4b3a2b125?trk=nav_responsive_tab_profile"><img class="logo" src="assets/images/LinkedInLogo.jpg"></a>
-				<a href="https://github.com/marioaburto10"><img class="logo" src="assets/images/GithubLogo.jpg"></a>
-			</section>
+					<div class="line2"></div>
+				<a href="https://twitter.com/MarioAburto33"><img class="logo" src="assets/images/TwitterLogo.png"></a>
+				<a href="https://www.linkedin.com/in/mario-aburto-4b3a2b125?trk=nav_responsive_tab_profile"><img class="logo" src="assets/images/LinkedInLogo.png"></a>
+				<a href="https://github.com/marioaburto10"><img class="logo" src="assets/images/GitHubLogo1.png"></a>
+			
+			</aside>
 		</div>
 		<footer>
-			&copy;Copyright 2016 Mario Aburto
+			<small>&copy;Copyright 2016 Mario Aburto</small>
 		</footer>
+	
 </body>
-</html> <img src="">
+</html>
